# unity-grpc-package

./: README.md
.github/workflows/: npm-publish.yml
Server/: Cargo.toml  build.rs
Server/src/: main.rs
Unity/Assets/Scenes/: SampleScene.unity
Unity/Assets/Scripts/: GRPCExample.cs
Unity/Assets/Scripts/gRPC/: Service.cs  ServiceGrpc.cs
Unity/ProjectSettings/: ProjectSettings.asset
proto/: generator.sh  service.proto
