[package]
name = "grpc-server"
version = "0.1.0"
edition = "2018"

[dependencies]
tonic = "0.4.0"
prost = "0.7"
tokio = { version = "1.0", features = ["rt-multi-thread", "time", "fs", "macros", "net"] }
tokio-stream = { version =  "0.1", features = ["net"] }
async-stream = "0.3"
futures = { version = "0.3", default-features = false, features = ["alloc"] }
tower = { version = "0.4" }

[build-dependencies]
tonic-build = "0.4.0"
